--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+# Core Framework
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 python-multipart==0.0.6
@@ -34,12 +35,15 @@ spacy==3.7.2
 langchain==0.1.6
 langchain-openai==0.0.5
 langchain-anthropic==0.0.1
+langchain-community==0.0.20
+langchain-core==0.1.23
 
 # NLP & Text Processing
 textblob==0.17.1
 vaderSentiment==3.3.2
 gensim==4.3.2
 wordcloud==1.9.3
+sentencepiece==0.2.1
 
 # Data Processing
 pandas==2.2.0
@@ -57,14 +61,10 @@ aiohttp==3.9.3
 boto3==1.34.34
 aioboto3==12.3.0
 
-# API Integrations (Optional - install as needed)
-# zenpy==2.0.41  # Zendesk integration
-# python-zendesk==1.1.1  # Alternative Zendesk client
-# hubspot-api-client==8.5.0  # HubSpot integration
-
 # Email
 email-validator==2.1.0
 emails==0.6
+premailer==3.10.0
 
 # Security
 cryptography==42.0.2
@@ -78,10 +78,12 @@ python-json-logger==2.0.7
 pytest==7.4.4
 pytest-asyncio==0.23.4
 pytest-cov==4.1.0
-httpx==0.26.0
 faker==22.6.0
 
 # Utilities
 python-slugify==8.0.4
 python-dateutil==2.8.2
 pytz==2024.1
+beautifulsoup4==4.14.2
+lxml==6.0.2
+marshmallow==3.26.1
